Some changes are done

--- a/MobilePrograming/app/src/main/res/layout/activity_add.xml
+++ b/MobilePrograming/app/src/main/res/layout/activity_add.xml
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aktitive Adi"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginLeft="26dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="81dp"
@@ -91,13 +91,13 @@
 
     <Button
         android:id="@+id/newAdd"
-        android:layout_width="155dp"
-        android:layout_height="50dp"
+        android:layout_width="249dp"
+        android:layout_height="46dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="47dp"
         android:backgroundTint="@android:color/holo_green_dark"
-        android:text="Ekle"
+        android:text="Kaydet"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
@@ -151,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Süre Seç"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginLeft="44dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="65dp"
