--- a/MobilePrograming/app/src/main/res/layout/activity_list.xml
+++ b/MobilePrograming/app/src/main/res/layout/activity_list.xml
@@ -11,14 +11,14 @@
         android:id="@+id/dolu4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="60"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox7"
         android:layout_marginLeft="11dp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox25"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="60"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/checkBox7"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox25" />
 
     <CheckBox
         android:id="@+id/checkBox25"
@@ -186,10 +186,10 @@
         android:id="@+id/checkBox6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
         android:text="30"
         app:layout_constraintLeft_toRightOf="@+id/checkBox8"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="11dp"
         app:layout_constraintTop_toBottomOf="@+id/dolu3" />
 
     <CheckBox
@@ -206,29 +206,29 @@
         android:id="@+id/checkBox8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
         android:text="15"
         app:layout_constraintLeft_toRightOf="@+id/textView22"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="11dp"
         app:layout_constraintTop_toBottomOf="@+id/checkBox28" />
 
     <TextView
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:text="PC / Tablet"
         android:textSize="15sp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView27"
-        android:layout_marginLeft="22dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="70dp"
         android:layout_height="63dp"
         android:layout_marginLeft="52dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/user" />
@@ -239,11 +239,11 @@
         android:layout_height="31dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-condensed"
         android:text="Mehmet"
         android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintLeft_toRightOf="@+id/textView18"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -253,7 +253,7 @@
         android:layout_width="89dp"
         android:layout_height="30dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-condensed"
         android:text="Merhaba"
         android:textSize="24sp"
@@ -289,10 +289,10 @@
 
     <Button
         android:id="@+id/duzenle"
-        android:layout_width="115dp"
+        android:layout_width="120dp"
         android:layout_height="38dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="68dp"
         android:background="@android:color/holo_orange_light"
         android:text="Düzenle"
         app:layout_constraintLeft_toLeftOf="parent"
